--- a/GarageManagement/Views/Home/Index.cshtml
+++ b/GarageManagement/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome in your garage!</h1>
+    <p>Here you can manage your garage and your cars.</p>
+   <div class="tenor-gif-embed" data-postid="11210880171054096468" data-share-method="host" data-aspect-ratio="1" data-width="100%">
+   </div>
+<script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 </div>
