--- a/GarageManagement/Views/Shared/_Layout.cshtml
+++ b/GarageManagement/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li> <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Cars">Your cars</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="Index">Your cars</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Garage">Your garage</a>
