fully working auth

--- a/GarageManagement/Views/Shared/_LoginPartial.cshtml
+++ b/GarageManagement/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<Owner> SignInManager
+@inject UserManager<Owner> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
