--- a/GarageManagement/Views/Shared/_Layout.cshtml
+++ b/GarageManagement/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="Index">Your cars</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Garage">Your garage</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Garage" asp-action="Index">Your garage</a>
                         </li>
                       
                     </ul>
