--- a/GarageManagement/Views/Car/Edit.cshtml
+++ b/GarageManagement/Views/Car/Edit.cshtml
@@ -46,6 +46,12 @@
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
 
+            <div class="form-group">
+                <label asp-for="GarageId" class="control-label"></label>
+                <select asp-for="GarageId" class="form-control" asp-items="ViewBag.GarageId"></select>
+                <span asp-validation-for="GarageId" class="text-danger"></span>
+            </div>
+
             <div class="form-group mt-3">
                 <input type="submit" value="Zapisz" class="btn btn-primary" />
                 <a asp-action="Index" class="btn btn-secondary">Powrót do listy</a>
