--- a/GarageManagement/Views/Car/Delete.cshtml
+++ b/GarageManagement/Views/Car/Delete.cshtml
@@ -24,10 +24,18 @@
         <dt class="col-sm-2">Status</dt>
         <dd class="col-sm-10">@Model.Status</dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Usuń" class="btn btn-danger" />
+
+    @if (User.IsInRole("Administrator") || User.Identity.Name == Model.OwnerId)
+    {
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Usuń" class="btn btn-danger" />
+            <a asp-action="Index" class="btn btn-secondary">Powrót do listy</a>
+        </form>
+    }
+    else
+    {
+        <p class="text-danger">Nie masz uprawnień do usunięcia tego samochodu.</p>
         <a asp-action="Index" class="btn btn-secondary">Powrót do listy</a>
-    </form>
-</div> 
+    }
+</div>
