--- a/GarageManagement/Views/Car/Create.cshtml
+++ b/GarageManagement/Views/Car/Create.cshtml
@@ -50,11 +50,18 @@
                 <select asp-for="GarageId" class="form-control" asp-items="ViewBag.GarageId"></select>
                 <span asp-validation-for="GarageId" class="text-danger"></span>
             </div>
+            @if (User.IsInRole("Admin") || User.IsInRole("User"))
+            {
+                <div class="form-group mt-3">
+                    <input type="submit" value="Dodaj" class="btn btn-primary" />
+                    <a asp-action="Index" class="btn btn-secondary">Powrót do listy</a>
+                </div>
+            }
+            else
+            {
+                <p class="text-danger">Nie masz uprawnień do dodawania samochodów.</p>
+            }
 
-            <div class="form-group mt-3">
-                <input type="submit" value="Dodaj" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-secondary">Powrót do listy</a>
-            </div>
         </form>
     </div>
 </div>
