--- a/GarageManagement/Views/Car/Details.cshtml
+++ b/GarageManagement/Views/Car/Details.cshtml
@@ -65,6 +65,9 @@
 </div>
 
 <div class="mt-3">
-    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edytuj</a>
+    @if (User.IsInRole("Administrator") || User.Identity.Name == Model.OwnerId)
+    {
+        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edytuj</a>
+    }
     <a asp-action="Index" class="btn btn-secondary">Powrót do listy</a>
-</div> 
+</div>
