--- a/GarageManagement/Views/Garage/Create.cshtml
+++ b/GarageManagement/Views/Garage/Create.cshtml
@@ -8,29 +8,37 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
-            <div class="form-group">
-                <label asp-for="Name" class="control-label">Nazwa</label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
+        @if (User.IsInRole("Administrator") || User.IsInRole("Użytkownik"))
+        {
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-            <div class="form-group">
-                <label asp-for="Location" class="control-label">Lokalizacja</label>
-                <input asp-for="Location" class="form-control" />
-                <span asp-validation-for="Location" class="text-danger"></span>
-            </div>
+                <div class="form-group">
+                    <label asp-for="Name" class="control-label">Nazwa</label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
 
-            <div class="form-group mt-3">
-                <input type="submit" value="Dodaj" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-secondary">Powrót do listy</a>
-            </div>
-        </form>
+                <div class="form-group">
+                    <label asp-for="Location" class="control-label">Lokalizacja</label>
+                    <input asp-for="Location" class="form-control" />
+                    <span asp-validation-for="Location" class="text-danger"></span>
+                </div>
+
+                <div class="form-group mt-3">
+                    <input type="submit" value="Dodaj" class="btn btn-primary" />
+                    <a asp-action="Index" class="btn btn-secondary">Powrót do listy</a>
+                </div>
+            </form>
+        }
+        else
+        {
+            <p class="text-danger">Nie masz uprawnień do dodawania nowych garaży.</p>
+            <a asp-action="Index" class="btn btn-secondary">Powrót do listy</a>
+        }
     </div>
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-} 
+}
