--- a/GarageManagement/Views/Account/EditProfile.cshtml
+++ b/GarageManagement/Views/Account/EditProfile.cshtml
@@ -17,7 +17,7 @@
         <input asp-for="Email" class="form-control" />
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
-    @if (User.IsInRole("Administrator") || User.IsInRole("U¿ytkownik"))
+    @if (User.IsInRole("Administrator") || User.IsInRole("USer"))
     {
         <button type="submit" class="btn btn-primary">Save Changes</button>
     }
