--- a/GarageManagement/Views/Car/Create.cshtml
+++ b/GarageManagement/Views/Car/Create.cshtml
@@ -50,7 +50,7 @@
                 <select asp-for="GarageId" class="form-control" asp-items="ViewBag.GarageId"></select>
                 <span asp-validation-for="GarageId" class="text-danger"></span>
             </div>
-            @if (User.IsInRole("Admin") || User.IsInRole("User"))
+            @if (User.IsInRole("Administrator") || User.IsInRole("User"))
             {
                 <div class="form-group mt-3">
                     <input type="submit" value="Dodaj" class="btn btn-primary" />
