--- a/GarageManagement/Views/Garage/Create.cshtml
+++ b/GarageManagement/Views/Garage/Create.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        @if (User.IsInRole("Administrator") || User.IsInRole("Użytkownik"))
+        @if (User.IsInRole("Administrator") || User.IsInRole("User"))
         {
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
