--- a/GarageManagement/Views/Shared/_LoginPartial.cshtml
+++ b/GarageManagement/Views/Shared/_LoginPartial.cshtml
@@ -1,27 +1,34 @@
-﻿@using Microsoft.AspNetCore.Identity
-
-@inject SignInManager<Owner> SignInManager
-@inject UserManager<Owner> UserManager
-
-<ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
+﻿@if (User.Identity.IsAuthenticated)
 {
-    <li class="nav-item">
-        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-    </li>
-    <li class="nav-item">
-        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
-        </form>
-    </li>
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link text-dark" href="@Url.Action("UserProfile", "Account")">Hello, @User.Identity.Name!</a>
+        </li>
+        @if (User.IsInRole("Administrator"))
+        {
+            <li class="nav-item">
+                <a class="nav-link" href="@Url.Action("Index", "Admin")">Admin Panel</a>
+            </li>
+        }
+        @if (User.IsInRole("User"))
+        {
+            <li class="nav-item">
+                <a class="nav-link" href="@Url.Action("Index", "Garage")">My Garages</a>
+            </li>
+        }
+        <li class="nav-item">
+            <a class="nav-link text-danger" href="@Url.Action("Logout", "Account")">Logout</a>
+        </li>
+    </ul>
 }
 else
 {
-    <li class="nav-item">
-        <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link text-success" href="@Url.Action("Login", "Account")">Login</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-primary" href="@Url.Action("Register", "Account")">Register</a>
+        </li>
+    </ul>
 }
-</ul>
