--- a/GarageManagement/Views/Shared/_Layout.cshtml
+++ b/GarageManagement/Views/Shared/_Layout.cshtml
@@ -28,10 +28,10 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Garage" asp-action="Index">Your Garage</a>
+                                <a class="nav-link" asp-area="" asp-controller="Garage" asp-action="Index">My Garage</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Car" asp-action="Index">Your Cars</a>
+                                <a class="nav-link" asp-area="" asp-controller="Car" asp-action="Index">My Cars</a>
                             </li>
                         }
                     </ul>
