--- a/GarageManagement/Views/_ViewImports.cshtml
+++ b/GarageManagement/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using GarageManagement
 @using GarageManagement.Models
+@using GarageManagement.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
