--- a/GarageManagement/Views/Home/Index.cshtml
+++ b/GarageManagement/Views/Home/Index.cshtml
@@ -5,7 +5,5 @@
 <div class="text-center">
     <h1 class="display-4">Welcome in your garage!</h1>
     <p>Here you can manage your garage and your cars.</p>
-   <div class="tenor-gif-embed" data-postid="11210880171054096468" data-share-method="host" data-aspect-ratio="1" data-width="100%">
-   </div>
-<script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+   <img src="https://media.giphy.com/media/ZpWmnRYVrwn6w/giphy.gif?cid=ecf05e47notuhjsahdotzrweyfr5uwpm9f2j2343dfhpk7nh&ep=v1_gifs_search&rid=giphy.gif&ct=g" alt="New GIF" style="width: 100%; max-width: 90%; overflow: hidden; margin: 0 auto; max-height: 800px;" />
 </div>
